add more div to main div
if neccessary add more div

--- a/FLEXBOX COURSES/index.html
+++ b/FLEXBOX COURSES/index.html
@@ -54,7 +54,7 @@
     <div class="box9">40</div>
 
 </div> -->
-
+    // div></div>
 <div class="navigation">
     <div class="box1">one</div>
     <div class="box2">two</div>
